[package]
name = "lga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
crossterm = "0.25"
directories = "5.0.1"
file-format = "0.17.3"
humansize = "2.1.3"
serde = { version = "1.0.164", features = ["derive"] }
toml = "0.7.4"
tui = "0.19.0"
